# hubo_user_interface

./: README.md
gui_robot_control/: CMakeLists.txt  Changelist.txt  package.xml  setup.py
gui_robot_control/src/gui_robot_control/: control_crystal.py  master_robot_control.py
localization_marker_msgs/: CMakeLists.txt  package.xml
localization_markers/: CMakeLists.txt  package.xml  test_cloud.pcd
localization_markers/demo/valve_world/: valve_demo.world
localization_markers/launch/: localization_marker_demo_valve.launch  localization_marker_drc.launch  localization_marker_turtlebot_sim.launch
localization_markers/msg/: set_localization_marker.msg
localization_markers/resources/: torus.dae
localization_markers/rviz/: localization_markers.vcg  localization_markers_pr2.vcg
localization_markers/src/: localization_marker_server.cpp  localization_marker_server_drc.cpp
robot_placement/: CMakeLists.txt  package.xml  setup.py
robot_placement/src/robot_placement/: robot_placement.py
rviz_plugins/comm_indicator/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugins/comm_indicator/include/: drive_widget_two.h  teleop_panel_two.h
rviz_plugins/comm_indicator/resources/Gimp Originals/: Meter_10.xcf  Meter_12.xcf  Meter_9.xcf
rviz_plugins/comm_indicator/src/: drive_widget_two.cpp  teleop_panel_two.cpp
rviz_plugins/hubo_dashboard/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugins/hubo_dashboard/include/: hubo_dashboard_panel.h  hubo_dashboard_widget.h
rviz_plugins/hubo_dashboard/resources/Gimp Originals/: Comm_Meter.xcf  Meter_1.xcf  Meter_11.xcf  Meter_2.xcf  Meter_3.xcf  Meter_4.xcf  Meter_5.xcf  Meter_6.xcf  Meter_7.xcf  Meter_8.xcf
rviz_plugins/hubo_dashboard/src/: hubo_dashboard_batt.cpp  hubo_dashboard_comm.cpp  hubo_dashboard_joint.cpp  hubo_dashboard_panel.cpp  hubo_dashboard_widget.cpp
rviz_plugins/hubo_sensor_control/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugins/hubo_sensor_control/include/: hubo_defaults.h  hubo_sensor_control.h
rviz_plugins/hubo_sensor_control/src/: config_tab.cpp  config_tab_slots.cpp  data_request_tab.cpp  data_request_tab_slots.cpp  hubo_sensor_control_plugin.cpp  robot_state_tab.cpp  robot_state_tab_slots.cpp  robot_vision_tab.cpp  robot_vision_tab_slots.cpp  robot_vision_tab_slots.cpp.autosave
